<resources>
    <string name="app_name">Gapura Movie</string>

    // Detail Activity
    <string name="detail_overview">Overview</string>
    <string name="detail_title_status">Status</string>
    <string name="detail_title_release_date">Release Date</string>
    <string name="detail_title_original_language">Original Language</string>
    <string name="detail_title_runtime">Runtime</string>
    <string name="detail_title_homepage">Homepage</string>

    // Menu Search
    <string name="action_search">Action Search</string>
    <string name="searchable_search_movie">Search Movies</string>
    <string name="close">Close</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    // Menu Navigation Drawer
    <string name="home">Home</string>
    <string name="change_language">Change Language</string>
    <string name="settings">Settings</string>

    // Tab Name
    <string name="tab_popular">POPULAR</string>
    <string name="tab_now_playing">NOW PLAYING</string>
    <string name="tab_upcoming">UPCOMING</string>

    // Toast
    <string name="toast_empty">Empty</string>
    <string name="toast_failed">Failed</string>
    <string name="toast_not_found">Movie not found</string>

    <string name="progress_loading">Loading</string>
    <string name="minute">\u0020mins</string>
    <string name="no_tagline">No Tagline</string>
    <string name="detail_movie_title">Movie Title</string>
    <string name="detail_movie_description">Description</string>
    <string name="rating">Rating</string>

    <string name="favourite">Favourite</string>
    <string name="add_favourite">Added to the favourite list</string>
    <string name="remove_favourite">Removed from favourite list</string>
    <string name="no_favourite_data">No Favourite Data</string>
    <string name="removed_favourite">One item removed from favourite</string>
    <string name="share">Share</string>
    <string name="share_using">Share Using</string>

    <string name="repeat_notif">Dicoding Gapura Movie missing you&#8230;</string>

    <string name="add_widget">Add widget</string>
    <string name="appwidget_text">STAR WARS BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="setting">Settings</string>
    <string name="favourite_list">Favourite List</string>
    <string name="title_activity_settings">Settings</string>

    <string name="key_daily_reminder">key_daily_reminder</string>
    <string name="key_setting_language">key_setting_language</string>
    <string name="key_release_reminder">key_release_reminder</string>

    <string name="release_notification1">Today</string>
    <string name="release_notification2">release</string>
    <string name="preferences_title_1">Change Language</string>
    <string name="preferences_summary_1">Tap to change the language</string>
    <string name="preferences_summary_2">Turn this option on or off</string>
    <string name="preferences_title_2">Daily Reminder</string>
    <string name="preferences_title_3">Release Reminder</string>
    <string name="preferences_summary_3">Give you a notification of new release movie</string>
    <string name="Language">Language</string>
    <string name="Notifications">Notifications</string>

</resources>

