<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group>
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_grey_400_24dp"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_grey_400_24dp"
            android:title="@string/favourite" />
    </group>

    <item android:title="@null">
        <menu>

        </menu>
    </item>

    <item android:title="@string/settings">
        <menu>
            <item
                android:id="@+id/nav_setting"
                android:icon="@drawable/ic_settings_grey_500_24dp"
                android:title="@string/setting"/>
            <item
                android:id="@+id/nav_change_language"
                android:icon="@drawable/ic_translate_grey_500_24dp"
                android:title="@string/change_language" />
        </menu>
    </item>

</menu>
